# lzma-rust2

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: comparison.rs  lzma2.rs
examples/: lzip_reader.rs  lzip_writer.rs  lzma2_reader.rs  lzma2_writer.rs  lzma_reader.rs  lzma_writer.rs  xz_reader.rs  xz_writer.rs
src/: decoder.rs  lib.rs  lzip.rs  lzma2_reader.rs  lzma2_reader_mt.rs  lzma_reader.rs  no_std.rs  range_dec.rs  work_pool.rs  work_queue.rs  xz.rs
src/enc/: encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma2_writer.rs  lzma2_writer_mt.rs  lzma_writer.rs  mod.rs  range_enc.rs
src/filter/: bcj.rs  bcj2.rs  delta.rs
src/filter/bcj/: arm.rs  ia64.rs  ppc.rs  riscv.rs  sparc.rs  x86.rs
src/lz/: aligned_memory.rs  bt4.rs  hash234.rs  hc4.rs  lz_decoder.rs  lz_encoder.rs  mod.rs
src/lzip/: reader.rs  reader_mt.rs  writer.rs  writer_mt.rs
src/xz/: reader.rs  reader_mt.rs  writer.rs  writer_mt.rs
tests/: efficiency.rs  lzip.rs  lzip_mt.rs  lzip_reference.rs  lzma.rs  lzma2.rs  lzma2_mt.rs  multi_writer.rs  regression.rs  unwind_safe.rs  xz.rs  xz_mt.rs  xz_reference.rs
tests/data/: issue_56.xz  wget-arm  wget-arm-thumb  wget-arm-thumb.xz  wget-arm.xz  wget-arm64  wget-arm64.xz  wget-ia64  wget-ia64.xz  wget-ppc  wget-ppc.xz  wget-riscv  wget-riscv.xz  wget-sparc  wget-sparc.xz  wget-x86  wget-x86.xz
