[package]
description = "LZMA/LZMA2 codec ported from 'tukaani xz for java'"
edition = "2021"
homepage = "https://github.com/hasenbanck/lzma-rust2/"
name = "lzma-rust2"
repository = "https://github.com/hasenbanck/lzma-rust2/"
rust-version = "1.85"
version = "0.5.0"
keywords = ["lzma"]
license = "Apache-2.0"
exclude = ["/tests/data"]

[features]
default = ["optimization", "encoder"]
optimization = []
encoder = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
liblzma = { version = "0.4", features = ["static"] }

[[bench]]
name = "comparison"
harness = false

[package.metadata.docs.rs]
features = ["encoder"]
rustdoc-args = ["--cfg", "docsrs"]
